--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
+
 {% block content %}
     <h1>Toko Buah Nazkya</h1>
-    <h1>Tugas PBP</h1>
 
     <h5>Name:</h5>
     <p>{{name}}</p>
@@ -12,8 +12,8 @@
 <table>
     <tr>
         <th>Name</th>
-        <th>Price</th>
         <th>Amount</th>
+        <th>Price</th>
         <th>Description</th>
         <th>Category</th>
         <th>Date Added</th>
@@ -21,14 +21,14 @@
 
     {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
 
-    {% for product in products %}
+    {% for item in items %}
         <tr>
-            <td>{{product.name}}</td>
-            <td>{{product.price}}</td>
-            <td>{{product.amount}}</td>
-            <td>{{product.description}}</td>
-            <td>{{product.category}}</td>
-            <td>{{product.date_added}}</td>
+            <td>{{item.name}}</td>
+            <td>{{item.amount}}</td>
+            <td>{{item.price}}</td>
+            <td>{{item.description}}</td>
+            <td>{{item.category}}</td>
+            <td>{{item.date_added}}</td>
         </tr>
     {% endfor %}
 </table>
@@ -40,5 +40,13 @@
         Add New Product
     </button>
 </a>
+
+
+<a href="{% url 'main:logout' %}">
+    <button>
+        Logout
+    </button>
+</a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 
 {% endblock content %}
